<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D881D69"
    android:icon="@mipmap/iconorenfe"
    android:roundIcon="@mipmap/iconorenfe_round"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tituloApp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/botonLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#881D69"
        android:onClick="limpiar"
        android:text="@string/textoLimpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoCalculo"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/textoErrores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:textAlignment="center"
        android:textColor="#F65757"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textoCalculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoErrores"
        app:layout_constraintVertical_bias="0.304" />

    <EditText
        android:id="@+id/cajaCoste"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cajaEdad"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaCoste"
        app:layout_constraintVertical_bias="0.583" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="222dp"
        android:layout_height="57dp"
        android:layout_marginBottom="264dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="@+id/textoEdad">

        <RadioButton
            android:id="@+id/radioNumerosa"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:onClick="calcular"
            android:text="@string/radioFamiliaNum" />

        <RadioButton
            android:id="@+id/radioNoNumerosa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="calcular"
            android:text="@string/radioFamiliaNoNum" />

    </RadioGroup>

    <TextView
        android:id="@+id/textoEdad"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/textoEdad"
        app:layout_constraintBottom_toBottomOf="@+id/cajaEdad"
        app:layout_constraintEnd_toStartOf="@+id/cajaEdad"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:text="@string/textoTarjetaDorada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkDiscapacidad"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.074" />

    <CheckBox
        android:id="@+id/checkDiscapacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:onClick="calcular"
        android:text="@string/textoDiscapacidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textoCoste"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/textoCoste"
        app:layout_constraintBottom_toTopOf="@+id/textoEdad"
        app:layout_constraintEnd_toStartOf="@+id/cajaCoste"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cajaCoste"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/botonCacular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:backgroundTint="#871D69"
        android:onClick="calcular"
        android:text="@string/textoCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoCalculo"
        app:layout_constraintVertical_bias="0.268" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="71dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/tituloApp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="263dp"
        android:text="@string/nombre"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>